force-app/main/default/objects/OCR_Commit__c/OCR_Commit__c.object-meta.xml
<CustomObject>
    <label>OCR Commit</label>
    <nameField>
        <label>OCR Commit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OCR Commit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>