force-app/main/default/objects/OCR_Commit__c/fields/Account_Test__c.field-meta.xml
<CustomField>
    <fullName>Account_Test__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Test</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>OCR Commit</relationshipLabel>
    <relationshipName>OCR_Commit</relationshipName>
    <type>Lookup</type>
</CustomField>