force-app/main/default/objects/OCR_Commit__c/fields/Order_Summary__c.field-meta.xml
<CustomField>
    <fullName>Order_Summary__c</fullName>
    <label>Order Summary</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>