force-app/main/default/objects/OCR_Commit__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <label>Quarter</label>
    <length>1</length>
    <type>Text</type>
</CustomField>