force-app/main/default/objects/OCR_Commit__c/fields/Quarter_Week__c.field-meta.xml
<CustomField>
    <fullName>Quarter_Week__c</fullName>
    <label>Quarter Week</label>
    <length>2</length>
    <type>Text</type>
</CustomField>